force-app/main/default/objects/Candidate_Bookmark__c/Candidate_Bookmark__c.object-meta.xml
<CustomObject>
    <description>CV Review Agent - Candidate Bookmark</description>
    <label>Candidate Bookmark</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Bookmark Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Bookmarks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>