force-app/main/default/objects/Candidate_Bookmark__c/fields/Candidate_Overview__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Overview__c</fullName>
    <label>Candidate Overview</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>