force-app/main/default/objects/Candidate_Bookmark__c/fields/Evaluation_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Reasoning__c</fullName>
    <label>Evaluation Reasoning</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>